Update corne.conf to add mouse control

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,6 +9,7 @@ CONFIG_ZMK_DISPLAY=y
 # CONFIG_ZMK_SLEEP=y
 
 # Milliseconds of inactivity before entering deep sleep
+CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # STRONGER BLUETOOTH
@@ -19,3 +20,6 @@ CONFIG_ZMK_KEYBOARD_NAME="Corne cyi"
 
 # Battery level report interval in seconds
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=7200
+
+# Added line to enable support for mouse control
+CONFIG_ZMK_MOUSE=y
