--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,16 +1,19 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW=n
+# CONFIG_WS2812_STRIP=n
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+  # Setting for battery level to be shown in percentage
+  CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE = y
 
-# Enable deep sleep support
-# CONFIG_ZMK_SLEEP=y
+# Idle sleep function
+CONFIG_ZMK_IDLE_TIMEOUT = 30000
 
-# Milliseconds of inactivity before entering deep sleep
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+# Deep sleep - Inactivity  in Milisecond before entering deep sleep
+  # CONFIG_ZMK_SLEEP=y
+  # Comment out the Deep Sleep with the Corne larger battery feature
+  # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # STRONGER BLUETOOTH
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
