--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,7 +5,7 @@
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
   # Setting for battery level to be shown in percentage
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE = y
+  # CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE = y
 
 # Idle sleep function
 # CONFIG_ZMK_IDLE_TIMEOUT=30000
