reinstate idle sleep

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,7 +8,7 @@ CONFIG_ZMK_DISPLAY=y
   # CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE = y
 
 # Idle sleep function
-# CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_TIMEOUT=30000
 
 # Deep sleep - Inactivity  in Milisecond before entering deep sleep
   # CONFIG_ZMK_SLEEP=y
